--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "serve -s dist/liga-deportiva-ut2 -l $PORT",
+    "build": "npx ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "scripts": {
+  "build:all": "cd src && npm install && npx ng build --configuration production && cd ../liga-deportiva-backend && npm install"
+},
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
@@ -31,11 +34,12 @@
     "@angular/router": "^21.0.0",
     "bootstrap": "^5.3.8",
     "rxjs": "~7.8.0",
+    "serve": "^14.2.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.5",
-    "@angular/cli": "^21.0.5",
+    "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.0.0",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
