--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "packageManager": "npm@11.6.2",
   "dependencies": {
+    "@angular/cli": "^21.1.0",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
@@ -33,10 +34,10 @@
     "bootstrap": "^5.3.8",
     "rxjs": "~7.8.0",
     "serve": "^14.2.5",
-    "tslib": "^2.3.0",
-    "@angular/cli": "^21.1.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^21.1.0",
     "@angular/build": "^21.0.5",
     "@angular/compiler-cli": "^21.0.0",
     "jsdom": "^27.1.0",
@@ -44,4 +45,3 @@
     "vitest": "^4.0.8"
   }
 }
-
