--- a/liga-deportiva-backend/package.json
+++ b/liga-deportiva-backend/package.json
@@ -4,8 +4,7 @@
   "description": "Backend para Liga Deportiva",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,8 +14,8 @@
     "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.3.1"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
 
