--- a/liga-deportiva-backend/package.json
+++ b/liga-deportiva-backend/package.json
@@ -12,9 +12,11 @@
     "cors": "2.8.5",
     "bcryptjs": "2.4.3",
     "jsonwebtoken": "9.0.2",
-    "dotenv": "16.3.1"
+    "dotenv": "16.3.1",
+    "debug": "4.3.4"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
